# realtime-feeds

./: LICENSE  consumers.py  models.py  readme.md  routing.py  setup.cfg  trigger.py  views.py
migrations/: 0001_initial.py  0002_auto_20200406_0617.py
templates/feeds/: index.html
